--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@capacitor/android": "^6.1.2",
     "@capacitor/cli": "^6.1.2",
     "@capacitor/core": "^6.1.2",
+    "@capacitor/storage": "^1.2.5",
+    "@ionic/storage-angular": "^4.0.0",
     "@totvs/protheus-lib-core": "^14.1.1",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
