--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "siscontrol": {
+    "solucao-condominios": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/siscontrol",
+            "outputPath": "dist/solucao-condominios",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -71,10 +71,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "siscontrol:build:production"
+              "browserTarget": "solucao-condominios:build:production"
             },
             "development": {
-              "browserTarget": "siscontrol:build:development"
+              "browserTarget": "solucao-condominios:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -82,7 +82,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "siscontrol:build"
+            "browserTarget": "solucao-condominios:build"
           }
         },
         "test": {
