--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace "com.matiasdaniel.siscontrol"
+    namespace "com.danielmatias.solucaocondominios"
     compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "com.matiasdaniel.siscontrol"
+        applicationId "com.danielmatias.solucaocondominios"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
