--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@capacitor/android": "^6.1.2",
+    "@capacitor/app": "^6.0.2",
     "@capacitor/cli": "^6.1.2",
     "@capacitor/core": "^6.1.2",
     "@capacitor/storage": "^1.2.5",
+    "@ionic/angular": "^8.4.0",
     "@ionic/storage-angular": "^4.0.0",
     "@totvs/protheus-lib-core": "^14.1.1",
     "primeflex": "^3.3.1",
