--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^18.0.0",
     "@capacitor/android": "^6.1.2",
     "@capacitor/app": "^6.0.2",
+    "@capacitor/assets": "^3.0.5",
+    "@capacitor/camera": "^6.1.1",
     "@capacitor/cli": "^6.1.2",
     "@capacitor/core": "^6.1.2",
     "@capacitor/storage": "^1.2.5",
@@ -45,5 +47,11 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.4.2"
-  }
+  },
+  "assets": {
+    "android": {
+      "icon": "./assets/logo.png",
+      "splash": "./assets/logo.png"
+    }
+  }  
 }
