--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/camera": "^6.1.1",
     "@capacitor/cli": "^6.1.2",
     "@capacitor/core": "^6.1.2",
+    "@capacitor/network": "^6.0.3",
     "@capacitor/storage": "^1.2.5",
     "@ionic/angular": "^8.4.0",
     "@ionic/storage-angular": "^4.0.0",
@@ -53,5 +54,5 @@
       "icon": "./assets/logo.png",
       "splash": "./assets/logo.png"
     }
-  }  
+  }
 }
